@@ -4,4 +4,5 @@ export default {
 	SET_IS_SAVING_ACCOUNT_KEYS: 'SET_IS_SAVING_ACCOUNT_KEYS',
 	SET_IS_TESTING_ACCOUNT_KEYS: 'SET_IS_TESTING_ACCOUNT_KEYS',
 	SET_IS_VALID_KEYS: 'SET_IS_VALID_KEYS',
+	SET_IS_CONFIGURING_WEBHOOKS: 'SET_IS_CONFIGURING_WEBHOOKS',
 };
