@@ -90,10 +90,11 @@ class WC_REST_Stripe_Account_Controller extends WC_Stripe_REST_Base_Controller {
 	public function get_account() {
 		return new WP_REST_Response(
 			[
-				'account'                => $this->account->get_cached_account_data(),
-				'testmode'               => WC_Stripe_Webhook_State::get_testmode(),
-				'webhook_status_message' => WC_Stripe_Webhook_State::get_webhook_status_message(),
-				'webhook_url'            => WC_Stripe_Helper::get_webhook_url(),
+				'account'                 => $this->account->get_cached_account_data(),
+				'testmode'                => WC_Stripe_Webhook_State::get_testmode(),
+				'webhook_status_message'  => WC_Stripe_Webhook_State::get_webhook_status_message(),
+				'webhook_url'             => WC_Stripe_Helper::get_webhook_url(),
+				'configured_webhook_urls' => WC_Stripe_Webhook_State::get_configured_webhook_urls(),
 			]
 		);
 	}
